# leap_surveillance

./: .env.example  .gitignore  HANDOFF_NOTES.md  README.md  bigquery.py  check_nullable_schema.py  data_utils.py  pyproject.toml  refactoring_conversation.md  research.py  run_surveillance.py  schemas.py
.github/workflows/: tests.yml
leap_surveillance/: __init__.py  browser.py  common.py  consensus.py  models.py  questions.py  research.py  run_surveillance.py  sheets.py  storage.py  sync.py
memory/: conditional_questions.md  quality_check_2026-07-02.md
tests/: test_core_paths.py
